--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   location:
   device_preview:
   geocoder:
+  dropdown_search:
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
