--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   csc_picker: ^0.2.5
   provider: ^5.0.0
   response: ^1.0.0
-  intl_phone_field: ^2.0.0
+  intl_phone_field:
   geolocator: ^7.0.3
   search_map_place:
   location:
   device_preview:
   geocoder:
   dropdown_search:
-  intl: ^0.17.0
+  intl:
 
 dev_dependencies:
   flutter_test:
