--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="flutter_test_app"
+         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
                   android:value="AIzaSyDXgbuvH4h_A7OkEbqAucUKQSLUfJs8i2Y"/>
