--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
    <application
-        android:label="flutter_test_app"
+        android:label="Diet App"
          android:usesCleartextTraffic="true"
           android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
