--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   weight_slider:
   dio:
   image_picker:
+  #socket_io_client: ^2.0.0-beta.4-nullsafety.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
