--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
   # Google maps
-  google_maps_flutter:
   percent_indicator:
   delayed_display:
   timeline_tile:
@@ -38,7 +37,6 @@ dependencies:
   response:
   intl_phone_field:
   geolocator:
-  search_map_place:
   location:
   geocoder:
   dropdown_search:
@@ -50,8 +48,8 @@ dependencies:
   height_slider:
   weight_slider:
   dio:
+  easy_localization: ^3.0.0 
   image_picker:
-  #socket_io_client: ^2.0.0-beta.4-nullsafety.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lang/
+
     
 
 
