--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,10 +36,10 @@ dependencies:
   provider:
   response:
   intl_phone_field:
-  geolocator:
-  location:
-  geocoder:
-  dropdown_search:
+  geolocator: ^8.0.0
+  location: ^4.3.0
+  geocoder: ^0.2.1
+  dropdown_search: ^0.4.9
   intl:
   flutter_svg:
   toast:
